--- a/FrontEnd/pages/login.html
+++ b/FrontEnd/pages/login.html
@@ -1,47 +1,87 @@
-<!doctype html>
-<html lang="vi"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Login</title>
-<link rel="stylesheet" href="../assets/styles.css">
-<script src="../js/config.js"></script>
-<script src="../js/api.js"></script>
-<script src="../js/util.js"></script>
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="utf-8">
+  <title>Đăng nhập - Tourest VN</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/auth.css">
 </head>
-<body onload="updateNavAuth(); setBaseUrlHint()">
-<header><div>TourBooking FE</div><nav>
-<a href="../index.html">Home</a>
-<a href="../pages/tours.html">Tours</a>
-<a href="../pages/my-bookings.html" class="nav-my" style="display:none">My bookings</a>
-<a href="../pages/admin/dashboard.html" class="nav-admin" style="display:none">Admin</a>
-<a href="../pages/login.html" class="nav-login">Login</a>
-<a href="#" onclick="logout()" class="nav-logout" style="display:none">Logout</a>
-</nav></header>
-<div class="container"><div class="notice">API base: <b id="baseUrlHint"></b></div>
+<body>
 
-<div class="card">
-  <h3>Đăng nhập</h3>
-  <div class="row">
-    <input id="email" class="input" placeholder="Email">
-    <input id="password" type="password" class="input" placeholder="Mật khẩu">
-    <button class="btn" onclick="doLogin()">Login</button>
-    <a class="btn secondary" href="./register.html">Đăng ký</a>
-  </div>
-  <div id="msg"></div>
-</div>
-<script>
-async function doLogin(){
-  const email = document.getElementById('email').value.trim();
-  const password = document.getElementById('password').value;
-  try{
-    const res = await api('/auth/login',{ method:'POST', body:{email,password} });
-    const token = res?.data?.token;
-    const role = res?.data?.user?.role;
-    const uemail = res?.data?.user?.email;
-    if(!token) throw new Error('Không nhận được token');
-    setToken(token); setUserInfo(role, uemail);
-    updateNavAuth();
-    location.href = '../index.html';
-  }catch(e){ document.getElementById('msg').innerHTML = '<span class="error">'+e.message+'</span>'; }
-}
-</script>
-</div><footer>© TourBooking FE • vanilla HTML/CSS/JS</footer></body></html>
+  <header class="header" data-header>
+    <div class="container">
+      <a href="../index.html"><h1 class="logo">Tourest VN</h1></a>
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li><a href="../index.html" class="navbar-link">Trang chủ</a></li>
+          <li><a href="../pages/tours.html" class="navbar-link">Tour</a></li>
+          <li><a href="../pages/my-bookings.html" class="navbar-link">Đơn của tôi</a></li>
+          <li><a href="../pages/admin/dashboard.html" class="navbar-link">Admin</a></li>
+        </ul>
+        <a href="./register.html" class="btn btn-secondary">Đăng ký</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container auth-wrap">
+      <div class="auth-card">
+        <h2 class="auth-title">Đăng nhập</h2>
+        <p class="muted">Sử dụng email & mật khẩu để vào hệ thống.</p>
+
+        <form id="loginForm" novalidate>
+          <div class="form-row">
+            <label for="email" class="muted">Email</label>
+            <input id="email" type="email" class="input" placeholder="vd: user@example.com" autocomplete="username" required>
+          </div>
+
+          <div class="form-row relative">
+            <label for="password" class="muted">Mật khẩu</label>
+            <input id="password" type="password" class="input" placeholder="••••••••" autocomplete="current-password" required>
+            <button id="togglePass" class="toggle-pass" type="button" aria-label="Hiện/ẩn mật khẩu">
+              <ion-icon name="eye-outline"></ion-icon>
+            </button>
+          </div>
+
+          <div class="row">
+            <label class="muted"><input id="remember" type="checkbox"> Ghi nhớ đăng nhập</label>
+            <a href="#" class="muted" onclick="alert('Liên hệ admin để đặt lại mật khẩu');return false;">Quên mật khẩu?</a>
+          </div>
+
+          <div class="form-row">
+            <button id="btnLogin" class="btn" type="submit">
+              <ion-icon name="log-in-outline"></ion-icon> Đăng nhập
+            </button>
+            <span id="msg" class="error"></span>
+          </div>
+        </form>
+
+        <div class="muted">Chưa có tài khoản? <a href="./register.html">Đăng ký ngay</a></div>
+      </div>
+
+      <div style="margin-top:16px" class="muted">
+        <b>Gợi ý test nhanh</b>: admin <code>admin@example.com</code> / <code>admin123</code> (nếu đã import seed).
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer" style="background-image:url('../assets/images/footer-bg.png')">
+    <div class="container">
+      <div class="footer-bottom">
+        <a href="../index.html" class="logo">Tourest VN</a>
+        <p class="copyright">© 2025 Tourest Việt Nam</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- JS -->
+  <script src="../assets/js/config.js"></script>
+  <script src="../assets/js/auth-login.js"></script>
+
+  <!-- Ionicons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+</html>
