--- a/FrontEnd/pages/admin/categories.html
+++ b/FrontEnd/pages/admin/categories.html
@@ -1,56 +1,43 @@
-<!doctype html>
-<html lang="vi"><head>
+<!doctype html><html lang="vi"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Admin Categories</title>
-<link rel="stylesheet" href="../../assets/styles.css">
-<script src="../../js/config.js"></script>
-<script src="../../js/api.js"></script>
-<script src="../../js/util.js"></script>
-</head>
-<body onload="updateNavAuth(); setBaseUrlHint()">
-<header><div>TourBooking FE</div><nav>
-<a href="../../index.html">Home</a>
-<a href="../../pages/tours.html">Tours</a>
-<a href="../../pages/my-bookings.html" class="nav-my" style="display:none">My bookings</a>
-<a href="../../pages/admin/dashboard.html" class="nav-admin" style="display:none">Admin</a>
-<a href="../../pages/login.html" class="nav-login">Login</a>
-<a href="#" onclick="logout()" class="nav-logout" style="display:none">Logout</a>
-</nav></header>
-<div class="container"><div class="notice">API base: <b id="baseUrlHint"></b></div>
+<title>Admin • Categories</title>
+<link rel="stylesheet" href="../../assets/css/style.css">
+<link rel="stylesheet" href="../../assets/css/admin.css">
+<script src="../../assets/js/config.js"></script><script src="../../assets/js/api.js"></script><script src="../../assets/js/util.js"></script>
+<script src="../../assets/js/admin-categories.js" defer></script>
+</head><body>
+<header class="site-header"><div class="hdr-wrap">
+  <div class="brand"><a class="brand-link" href="../../index.html">TourBooking</a><span class="brand-dot">•</span><span class="brand-sub">Admin</span></div>
+  <nav class="hdr-nav"><a href="./dashboard.html">Dashboard</a></nav>
+</div></header>
 
-<script>guardAdmin();</script>
-<div class="card">
-  <h3>Categories</h3>
-  <div class="row">
-    <input id="q" class="input" placeholder="Tìm tên">
-    <button class="btn" onclick="loadCats(1)">Tìm</button>
+<main class="container admin-container">
+<section class="panel">
+  <div class="panel-head"><h2 class="panel-title">Categories</h2><button class="btn light" id="btnNew">+ Thêm</button></div>
+  <div class="toolbar">
+    <input id="q" class="input" placeholder="Tìm theo tên…">
+    <select id="pageSize"><option>10</option><option>20</option><option>50</option></select>
+    <button class="btn light" id="btnFilter">Lọc</button>
   </div>
-  <div class="row">
-    <input id="name" class="input" placeholder="Tên category">
-    <input id="desc" class="input" placeholder="Mô tả">
-    <button class="btn" onclick="createCat()">Tạo</button>
+  <table class="table">
+    <thead><tr><th>ID</th><th>Tên</th><th>Mô tả</th><th>Actions</th></tr></thead>
+    <tbody id="rows"><tr><td colspan="4" class="muted">Đang tải…</td></tr></tbody>
+  </table>
+  <div class="pager"><span class="muted" id="meta"></span><div style="margin-left:auto"><button class="btn light small" id="prev">Prev</button><button class="btn light small" id="next">Next</button></div></div>
+</section>
+</main>
+
+<!-- Modal -->
+<div class="modal-backdrop" id="dlgWrap">
+  <div class="modal">
+    <div class="modal-head"><h3 class="modal-title" id="dlgTitle">Thêm category</h3><button class="btn light small" id="dlgClose">Đóng</button></div>
+    <div class="form-grid">
+      <div style="grid-column:1/-1"><label>Tên</label><input id="fName" class="input" placeholder="Biển đảo"></div>
+      <div style="grid-column:1/-1"><label>Mô tả</label><textarea id="fDesc" class="input" placeholder="…"></textarea></div>
+    </div>
+    <div class="modal-foot"><button class="btn" id="dlgSave">Lưu</button></div>
   </div>
-  <table class="table"><thead><tr><th>ID</th><th>Name</th><th>Description</th></tr></thead><tbody id="tb"></tbody></table>
-  <div id="pager"></div>
 </div>
-<script>
-let pageSize=10;
-async function loadCats(page){
-  const q=document.getElementById('q').value.trim();
-  const res = await api(`/categories?page=${page}&page_size=${pageSize}&q=${encodeURIComponent(q)}`);
-  const items = res?.data?.items || [];
-  const meta = res?.data?.meta;
-  document.getElementById('tb').innerHTML = items.map(c=>`<tr><td>${c.id}</td><td>${c.name}</td><td>${c.description||''}</td></tr>`).join('');
-  renderPager(meta, document.getElementById('pager'), (p)=> loadCats(p));
-}
-async function createCat(){
-  const name=document.getElementById('name').value.trim();
-  const description=document.getElementById('desc').value.trim();
-  if(!name) return alert('Thiếu tên');
-  await api('/categories',{ method:'POST', auth:true, body:{name,description} });
-  document.getElementById('name').value=''; document.getElementById('desc').value='';
-  loadCats(1);
-}
-document.addEventListener('DOMContentLoaded', ()=> loadCats(1));
-</script>
-</div><footer>© TourBooking FE • vanilla HTML/CSS/JS</footer></body></html>
+
+<footer class="site-footer">© TourBooking</footer>
+</body></html>
