--- a/FrontEnd/pages/admin/tours.html
+++ b/FrontEnd/pages/admin/tours.html
@@ -1,86 +1,53 @@
-<!doctype html>
-<html lang="vi"><head>
+<!doctype html><html lang="vi"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Admin Tours</title>
-<link rel="stylesheet" href="../../assets/styles.css">
-<script src="../../js/config.js"></script>
-<script src="../../js/api.js"></script>
-<script src="../../js/util.js"></script>
-</head>
-<body onload="updateNavAuth(); setBaseUrlHint()">
-<header><div>TourBooking FE</div><nav>
-<a href="../../index.html">Home</a>
-<a href="../../pages/tours.html">Tours</a>
-<a href="../../pages/my-bookings.html" class="nav-my" style="display:none">My bookings</a>
-<a href="../../pages/admin/dashboard.html" class="nav-admin" style="display:none">Admin</a>
-<a href="../../pages/login.html" class="nav-login">Login</a>
-<a href="#" onclick="logout()" class="nav-logout" style="display:none">Logout</a>
-</nav></header>
-<div class="container"><div class="notice">API base: <b id="baseUrlHint"></b></div>
+<title>Admin • Tours</title>
+<link rel="stylesheet" href="../../assets/css/style.css">
+<link rel="stylesheet" href="../../assets/css/admin.css">
+<script src="../../assets/js/config.js"></script><script src="../../assets/js/api.js"></script><script src="../../assets/js/util.js"></script>
+<script src="../../assets/js/admin-tours.js" defer></script>
+</head><body>
+<header class="site-header"><div class="hdr-wrap">
+  <div class="brand"><a class="brand-link" href="../../index.html">TourBooking</a><span class="brand-dot">•</span><span class="brand-sub">Admin</span></div>
+  <nav class="hdr-nav"><a href="./dashboard.html">Dashboard</a></nav>
+</div></header>
 
-<script>guardAdmin();</script>
-<div class="card">
-  <h3>Tours</h3>
-  <div class="row">
-    <input id="q" class="input" placeholder="Tìm...">
-    <select id="sort" class="input">
-      <option value="created_at_desc">Mới nhất</option>
-      <option value="price_asc">Giá tăng</option>
-      <option value="price_desc">Giá giảm</option>
-    </select>
-    <button class="btn" onclick="loadTours(1)">Tìm</button>
+<main class="container admin-container">
+<section class="panel">
+  <div class="panel-head"><h2 class="panel-title">Tours</h2><button class="btn light" id="btnNew">+ Thêm</button></div>
+  <div class="toolbar">
+    <input id="q" class="input" placeholder="Tìm theo tên/địa điểm">
+    <select id="cat"></select>
+    <select id="status"><option value="">--Status--</option><option>Available</option><option>Full</option><option>Cancelled</option></select>
+    <select id="sort"><option value="">Sort</option><option value="created_at_desc">Mới nhất</option><option value="price_asc">Giá tăng</option><option value="price_desc">Giá giảm</option></select>
+    <select id="pageSize"><option>10</option><option>20</option></select>
+    <button class="btn light" id="btnFilter">Lọc</button>
   </div>
-  <div class="row">
-    <input id="title" class="input" placeholder="Tiêu đề">
-    <input id="price" class="input" placeholder="Giá">
-    <input id="catId" class="input" placeholder="Category ID">
-    <input id="loc" class="input" placeholder="Địa điểm">
-    <button class="btn" onclick="createTour()">Tạo</button>
+  <table class="table">
+    <thead><tr><th>ID</th><th>Tiêu đề</th><th>Danh mục</th><th>Giá</th><th>Trạng thái</th><th>Ngày</th><th>Actions</th></tr></thead>
+    <tbody id="rows"><tr><td colspan="7" class="muted">Đang tải…</td></tr></tbody>
+  </table>
+  <div class="pager"><span class="muted" id="meta"></span><div style="margin-left:auto"><button class="btn light small" id="prev">Prev</button><button class="btn light small" id="next">Next</button></div></div>
+</section>
+</main>
+
+<!-- Modal -->
+<div class="modal-backdrop" id="dlgWrap">
+  <div class="modal">
+    <div class="modal-head"><h3 class="modal-title" id="dlgTitle">Thêm tour</h3><button class="btn light small" id="dlgClose">Đóng</button></div>
+    <div class="form-grid">
+      <div><label>Tiêu đề</label><input id="fTitle" class="input"></div>
+      <div><label>Địa điểm</label><input id="fLocation" class="input"></div>
+      <div><label>Giá (VNĐ)</label><input id="fPrice" type="number" class="input" min="0"></div>
+      <div><label>Sức chứa</label><input id="fCapacity" type="number" class="input" min="1"></div>
+      <div><label>Bắt đầu</label><input id="fStart" type="date" class="input"></div>
+      <div><label>Kết thúc</label><input id="fEnd" type="date" class="input"></div>
+      <div><label>Danh mục</label><select id="fCat" class="input"></select></div>
+      <div><label>Status</label><select id="fStatus" class="input"><option>Available</option><option>Full</option><option>Cancelled</option></select></div>
+      <div style="grid-column:1/-1"><label>Mô tả</label><textarea id="fDesc" class="input"></textarea></div>
+    </div>
+    <div class="modal-foot"><button class="btn" id="dlgSave">Lưu</button></div>
   </div>
-  <table class="table"><thead><tr><th>ID</th><th>Title</th><th>Price</th><th>Location</th><th>Actions</th></tr></thead><tbody id="tb"></tbody></table>
-  <div id="pager"></div>
 </div>
-<script>
-let pageSize=10;
-async function loadTours(page){
-  const q=document.getElementById('q').value.trim();
-  const sort=document.getElementById('sort').value;
-  const res = await api(`/tours?page=${page}&page_size=${pageSize}&q=${encodeURIComponent(q)}&sort=${encodeURIComponent(sort)}`);
-  const items = res?.data?.items || []; const meta = res?.data?.meta;
-  document.getElementById('tb').innerHTML = items.map(t=>`
-    <tr>
-      <td>${t.id}</td><td>${t.title}</td><td>${Number(t.price).toLocaleString('vi-VN')}</td><td>${t.location||''}</td>
-      <td>
-        <button class="btn small" onclick="editTour(${t.id})">Sửa</button>
-        <button class="btn secondary small" onclick="delTour(${t.id})">Xoá</button>
-        <a class="btn small" href="./photos.html?tourId=${t.id}">Ảnh</a>
-      </td>
-    </tr>`).join('');
-  renderPager(meta, document.getElementById('pager'), (p)=> loadTours(p));
-}
-async function createTour(){
-  const title = document.getElementById('title').value.trim();
-  const price = parseFloat(document.getElementById('price').value||0);
-  const category_id = parseInt(document.getElementById('catId').value||0);
-  const location = document.getElementById('loc').value.trim();
-  if(!title || !price || !category_id) return alert('Thiếu dữ liệu');
-  await api('/tours',{ method:'POST', auth:true, body:{ title, price, category_id, location } });
-  document.getElementById('title').value=''; document.getElementById('price').value=''; document.getElementById('catId').value=''; document.getElementById('loc').value='';
-  loadTours(1);
-}
-async function delTour(id){
-  if(!confirm('Xoá tour #'+id+'?')) return;
-  await api('/tours/'+id,{ method:'DELETE', auth:true });
-  loadTours(1);
-}
-async function editTour(id){
-  const title = prompt('Title mới:'); if(title==null) return;
-  const price = parseFloat(prompt('Giá mới:')||0); if(!price) return alert('Giá không hợp lệ');
-  const t = await api('/tours/'+id);
-  const body = { category_id: t.data.category_id, title, description: t.data.description, location: t.data.location, capacity: t.data.capacity, price, start_date: t.data.start_date, end_date: t.data.end_date, status: t.data.status };
-  await api('/tours/'+id,{ method:'PUT', auth:true, body });
-  loadTours(1);
-}
-document.addEventListener('DOMContentLoaded', ()=> loadTours(1));
-</script>
-</div><footer>© TourBooking FE • vanilla HTML/CSS/JS</footer></body></html>
+
+<footer class="site-footer">© TourBooking</footer>
+</body></html>
