--- a/FrontEnd/pages/admin/users.html
+++ b/FrontEnd/pages/admin/users.html
@@ -1,44 +1,34 @@
-<!doctype html>
-<html lang="vi"><head>
+<!doctype html><html lang="vi"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Admin Users</title>
-<link rel="stylesheet" href="../../assets/styles.css">
-<script src="../../js/config.js"></script>
-<script src="../../js/api.js"></script>
-<script src="../../js/util.js"></script>
-</head>
-<body onload="updateNavAuth(); setBaseUrlHint()">
-<header><div>TourBooking FE</div><nav>
-<a href="../../index.html">Home</a>
-<a href="../../pages/tours.html">Tours</a>
-<a href="../../pages/my-bookings.html" class="nav-my" style="display:none">My bookings</a>
-<a href="../../pages/admin/dashboard.html" class="nav-admin" style="display:none">Admin</a>
-<a href="../../pages/login.html" class="nav-login">Login</a>
-<a href="#" onclick="logout()" class="nav-logout" style="display:none">Logout</a>
-</nav></header>
-<div class="container"><div class="notice">API base: <b id="baseUrlHint"></b></div>
+<title>Admin • Users & Roles</title>
+<link rel="stylesheet" href="../../assets/css/style.css">
+<link rel="stylesheet" href="../../assets/css/admin.css">
+<script src="../../assets/js/config.js"></script><script src="../../assets/js/api.js"></script><script src="../../assets/js/util.js"></script>
+<script src="../../assets/js/admin-users.js" defer></script>
+</head><body>
+<header class="site-header"><div class="hdr-wrap">
+  <div class="brand"><a class="brand-link" href="../../index.html">TourBooking</a><span class="brand-dot">•</span><span class="brand-sub">Admin</span></div>
+  <nav class="hdr-nav"><a href="./dashboard.html">Dashboard</a></nav>
+</div></header>
 
-<script>guardAdmin();</script>
-<div class="card">
-  <h3>Users & Roles (read-only)</h3>
-  <div class="row">
-    <input id="q" class="input" placeholder="Tìm username/email/sđt">
-    <button class="btn" onclick="loadU(1)">Tìm</button>
+<main class="container admin-container">
+<section class="panel">
+  <div class="panel-head"><h2 class="panel-title">Users</h2></div>
+  <div class="toolbar">
+    <input id="q" class="input" placeholder="Tìm theo tên/email…">
+    <select id="role"><option value="">--Role--</option><option value="customer">customer</option><option value="admin">admin</option></select>
+    <button class="btn light" id="btnFilter">Lọc</button>
   </div>
-  <table class="table"><thead><tr><th>ID</th><th>Username</th><th>Email</th><th>Phone</th><th>Role</th><th>Created</th></tr></thead><tbody id="tb"></tbody></table>
-  <div id="pager"></div>
-</div>
-<script>
-let pageSize=12;
-async function loadU(page){
-  const q = document.getElementById('q').value.trim();
-  const res = await api(`/users?page=${page}&page_size=${pageSize}&q=${encodeURIComponent(q)}`, { auth:true });
-  const items = res?.data?.items || []; const meta = res?.data?.meta;
-  document.getElementById('tb').innerHTML = items.map(u=>`
-    <tr><td>${u.id}</td><td>${u.username}</td><td>${u.email}</td><td>${u.phone||''}</td><td>${u.role_id}</td><td>${u.created_at}</td></tr>
-  `).join('');
-  renderPager(meta, document.getElementById('pager'), (p)=> loadU(p));
-}
-document.addEventListener('DOMContentLoaded', ()=> loadU(1));
-</script>
-</div><footer>© TourBooking FE • vanilla HTML/CSS/JS</footer></body></html>
+  <table class="table">
+    <thead><tr><th>ID</th><th>Username</th><th>Email</th><th>Phone</th><th>Role</th><th>Created</th></tr></thead>
+    <tbody id="rows"><tr><td colspan="6" class="muted">Đang tải…</td></tr></tbody>
+  </table>
+</section>
+
+<section class="panel">
+  <div class="panel-head"><h2 class="panel-title">Roles</h2></div>
+  <table class="table"><thead><tr><th>ID</th><th>Name</th></tr></thead><tbody id="roles"><tr><td colspan="2" class="muted">Đang tải…</td></tr></tbody></table>
+</section>
+</main>
+<footer class="site-footer">© TourBooking</footer>
+</body></html>
