--- a/FrontEnd/pages/tours.html
+++ b/FrontEnd/pages/tours.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Tours</title>
 <link rel="stylesheet" href="../assets/styles.css">
-<script src="../js/config.js"></script>
-<script src="../js/api.js"></script>
-<script src="../js/util.js"></script>
+<script src="../assets/js/config.js"></script>
+<script src="../assets/js/api.js"></script>
+<script src="../assets/js/util.js"></script>
 </head>
 <body onload="updateNavAuth(); setBaseUrlHint()">
 <header><div>TourBooking FE</div><nav>
